fix: updated overflow

--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
     box-sizing: border-box;
     font-family: talento;
     transition: background-color 0.1s linear;
+    scrollbar-width: thin;
 }
 
 html,
